--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "mongoose": "^5.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.7"
   }
 }
